--- a/package.json
+++ b/package.json
@@ -1,9 +1,11 @@
 {
   "name": "audio-noise",
   "version": "1.0.0",
-  "description": "Collection of audio noises",
+  "description": "Generate colourful noise for audio",
   "main": "index.js",
-  "dependencies": {},
+  "dependencies": {
+    "audio-through": "^3.0.0"
+  },
   "devDependencies": {
     "tape": "^4.8.0",
     "web-audio-write": "^1.3.1"
@@ -18,6 +20,10 @@
   "keywords": [
     "audio",
     "audiojs",
+    "white-noise",
+    "noise colors",
+    "pink-noise",
+    "brown-noise",
     "dsp",
     "stream",
     "noise",
